[package]
name = "zenith"
version = "0.1.0"
authors = ["Zenith Su <happy@hacking.icu>"]
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
csv = "1.3.0"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
toml = "0.8.14"
